...
      <Stack.Screen name="CafeDetail" component={CafeDetailScreen} />
    </Stack.Navigator>
  );
}

const TAB_ICONS = {
  Discover: 'compass-outline',
  Feed: 'newspaper-outline',
  Author: 'person-circle-outline',
  'My List': 'bookmark-outline',
  Recommend: 'add-circle-outline',
};

...
